Fix: process add product to cart