@@ -12,6 +12,7 @@ import com.skripsi.siap_sewa.entity.ShopEntity;
 import com.skripsi.siap_sewa.enums.ErrorMessageEnum;
 import com.skripsi.siap_sewa.exception.DataNotFoundException;
 import com.skripsi.siap_sewa.repository.CartRepository;
+import com.skripsi.siap_sewa.repository.CustomerRepository;
 import com.skripsi.siap_sewa.repository.ProductRepository;
 import com.skripsi.siap_sewa.utils.CommonUtils;
 import com.skripsi.siap_sewa.utils.ProductUtils;
@@ -22,6 +23,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -36,6 +40,7 @@ public class CartService {
     private final ObjectMapper objectMapper;
     private final CommonUtils commonUtils;
     private final ProductRepository productRepository;
+    private final CustomerRepository customerRepository;
 
     public ResponseEntity<ApiResponse> getAllCartProductByCustomerId(String customerId) {
         try {
@@ -74,7 +79,7 @@ public class CartService {
                                             .isAvailableToRent(isAvailable)
                                             .build();
                                 })
-                                .collect(Collectors.toList());
+                                .toList();
 
                         return CartResponse.builder()
                                 .shopId(shop.getId())
@@ -94,45 +99,85 @@ public class CartService {
         }
     }
 
-    public ResponseEntity<ApiResponse> addProductToCart(@Valid AddCartRequest request) {
+    public ResponseEntity<ApiResponse> addProductToCart(AddCartRequest request) {
         try {
             log.info("Menambahkan produk ke cart: {}", request);
 
-            Optional<ProductEntity> productToCart = productRepository.findById(request.getProductId());
-
-            if(productToCart.isEmpty()){
-                log.warn("Produk tidak ditemukan: {}", request.getProductId());
-                throw new DataNotFoundException("Product dengan ID: " + request.getProductId() + " tidak ada");
+            // 1. Validasi customer exists
+            if (!customerRepository.existsById(request.getCustomerId())) {
+                return commonUtils.setResponse(ErrorMessageEnum.CUSTOMER_NOT_FOUND, null);
             }
 
-            // Cek apakah produk sudah ada di cart
-            boolean existsInCart = cartRepository.existsByCustomerIdAndProductId(
-                    request.getCustomerId(),
-                    request.getProductId()
-            );
+            // 2. Validasi produk exists
+            ProductEntity product = productRepository.findById(request.getProductId())
+                    .orElseThrow(() -> new DataNotFoundException("Product tidak ditemukan"));
 
-            if (existsInCart) {
-                log.warn("Produk sudah ada di cart");
+            // 3. Validasi status produk
+            if (!"AVAILABLE".equalsIgnoreCase(product.getStatus())) {
+                return commonUtils.setResponse(ErrorMessageEnum.PRODUCT_NOT_FOUND, null);
+            }
+
+            // 4. Validasi stok tersedia
+            if (product.getStock() <= 0) {
+                return commonUtils.setResponse(ErrorMessageEnum.INSUFFICIENT_STOCK, null);
+            }
+
+            // 5. Validasi quantity vs stock (maksimal setengah stok)
+            int maxAllowed = product.getStock() / 2;
+            if (request.getQuantity() > maxAllowed) {
                 return commonUtils.setResponse(
-                        ErrorMessageEnum.CART_ITEM_EXISTS,
-                        null
+                        ErrorMessageEnum.MAX_QUANTITY_EXCEEDED,
+                        Map.of("max_allowed", maxAllowed)
                 );
             }
 
-            CartEntity newCartItem = new CartEntity();
-            newCartItem.setCustomerId(request.getCustomerId());
-            newCartItem.setProduct(productToCart.get());
-            newCartItem.setQuantity(request.getQuantity());
-            newCartItem.setTotalAmount(request.getTotalAmount());
-            newCartItem.setStartRentDate(request.getStartRentDate());
-            newCartItem.setEndRentDate(request.getEndRentDate());
-            newCartItem.setShippingAddress(request.getShippingAddress());
+            // 6. Validasi minRented
+            if (request.getQuantity() < product.getMinRented()) {
+                return commonUtils.setResponse(
+                        ErrorMessageEnum.MIN_RENT_NOT_MET,
+                        Map.of("min_rent", product.getMinRented())
+                );
+            }
+
+            // 7. Validasi produk sudah ada di cart
+            if (cartRepository.existsByCustomerIdAndProductId(
+                    request.getCustomerId(),
+                    request.getProductId())) {
+                return commonUtils.setResponse(ErrorMessageEnum.CART_ITEM_EXISTS, null);
+            }
+
+            // 8. Hitung total amount
+            BigDecimal totalAmount = calculateRentalPrice(
+                    product,
+                    request.getStartRentDate(),
+                    request.getEndRentDate(),
+                    request.getQuantity()
+            );
+
+            // 9. Buat cart item
+            CartEntity newCartItem = CartEntity.builder()
+                    .customerId(request.getCustomerId())
+                    .product(product)
+                    .quantity(request.getQuantity())
+                    .totalAmount(totalAmount)
+                    .startRentDate(request.getStartRentDate())
+                    .endRentDate(request.getEndRentDate())
+                    .shippingAddress(request.getShippingAddress())
+                    .build();
 
             cartRepository.save(newCartItem);
-            log.info("Berhasil menambahkan produk ke cart");
 
-            CartResponse response = objectMapper.convertValue(newCartItem, CartResponse.class);
-            return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, response);
+            // 10. Membuat response
+            CartResponse.CartInfo cartInfo = buildCartInfo(product, request);
+
+            return commonUtils.setResponse(
+                    ErrorMessageEnum.SUCCESS,
+                    CartResponse.builder()
+                            .shopId(product.getShop().getId())
+                            .shopName(product.getShop().getName())
+                            .carts(List.of(cartInfo))
+                            .build()
+            );
 
         } catch (DataNotFoundException ex) {
             throw ex;
@@ -140,6 +185,49 @@ public class CartService {
             log.error("Gagal menambahkan ke cart: {}", ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
+    }
+
+    private BigDecimal calculateRentalPrice(ProductEntity product, LocalDate startDate,
+                                            LocalDate endDate, int quantity) {
+        long totalDays = ChronoUnit.DAYS.between(startDate, endDate);
+        BigDecimal totalPrice = BigDecimal.ZERO;
+        long remainingDays = totalDays;
+
+        // Hitung bulanan
+        if (remainingDays >= 30) {
+            long months = remainingDays / 30;
+            totalPrice = totalPrice.add(product.getMonthlyPrice().multiply(BigDecimal.valueOf(months)));
+            remainingDays %= 30;
+        }
+
+        // Hitung mingguan
+        if (remainingDays >= 7) {
+            long weeks = remainingDays / 7;
+            totalPrice = totalPrice.add(product.getWeeklyPrice().multiply(BigDecimal.valueOf(weeks)));
+            remainingDays %= 7;
+        }
+
+        // Hitung harian
+        if (remainingDays > 0) {
+            totalPrice = totalPrice.add(product.getDailyPrice().multiply(BigDecimal.valueOf(remainingDays)));
+        }
+
+        return totalPrice.multiply(BigDecimal.valueOf(quantity));
+    }
+
+    private CartResponse.CartInfo buildCartInfo(ProductEntity product, AddCartRequest request) {
+        return CartResponse.CartInfo.builder()
+                .productId(product.getId())
+                .productName(product.getName())
+                .price(product.getDailyPrice())
+                .startRentDate(CommonUtils.formatDate(request.getStartRentDate()))
+                .endRentDate(CommonUtils.formatDate(request.getEndRentDate()))
+                .rentDuration(CommonUtils.calculateRentDuration(
+                        request.getStartRentDate(),
+                        request.getEndRentDate()))
+                .quantity(request.getQuantity())
+                .isAvailableToRent(product.getStock() > 0)
+                .build();
     }
 
     public ResponseEntity<ApiResponse> editProductInCart(@Valid EditCartRequest request) {
